--- a/databases.html
+++ b/databases.html
@@ -10,9 +10,29 @@
     <link href="images/icon.png" rel="icon"/>
     <style type="text/css">
         body {
-            background-color: #dbffe0;
-            font-family: "Georgia", serif;
-            margin: 20px;
+            font-family: "Century Gothic", serif;
+            margin: 50px;
+        }
+
+        h1 {
+            color: #2e4566;
+        }
+
+        h2 {
+            text-decoration: underline;
+            color: #2f5496;
+        }
+
+        h3 {
+            color: #5b9bd5;
+        }
+
+        h4 {
+            color: #70c4f5;
+        }
+
+        hr {
+            border-color: #59a7ea;
         }
 
         ul > li {
@@ -43,7 +63,7 @@
         }
 
         keyword {
-            color: #a90001;
+            color: #c976c6;
             font-weight: bold;
         }
 
@@ -60,7 +80,7 @@
             z-index: 99;
             border: none;
             outline: none;
-            background-color: red;
+            background-color: #3460a9;
             color: white;
             cursor: pointer;
             padding: 15px;
@@ -80,7 +100,7 @@
             z-index: 99;
             border: none;
             outline: none;
-            background-color: red;
+            background-color: #3460a9;
             color: white;
             cursor: pointer;
             padding: 15px;
@@ -95,7 +115,8 @@
 </head>
 <body>
 <hr/> <!------------------------------------------------------------------------------->
-<h1> LI Introductory Databases </h1>
+<h1 align="center"> LI Introductory Databases </h1>
+<p align="center"> Template and style original: <keyword>Rhys Barrett</keyword>. </p>
 <hr/> <!------------------------------------------------------------------------------->
 Table of Contents (<a href="#" onclick="var expanded=this.innerHTML==='expand'; var subtopics=document.getElementsByClassName('subtopic'); for (var i = 0; i < subtopics.length; i++) { subtopics[i].style.display=(expanded ? '' : 'none'); } this.innerHTML=(expanded ? 'collapse' : 'expand');">expand</a>)
 <ol>
